--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -38,16 +38,16 @@ jobs:
           aws --endpoint-url ${BUCKET_ENDPOINT} s3api head-object --bucket ${BUCKET_NAME} --key test/poop.txt || \
           (echo "❌ Backend validation failed. Check credentials or filepath." && exit 1)
       
-      - name: Inject IPs into policy YAML
-        run: |
-          IP=$(curl -s ifconfig.me)
-          echo "Runner public IP: $IP"
-          aws ec2 authorize-security-group-ingress \
-            --region us-east-1 \
-            --group-id "sg-0ab46ac1c9bfe7e7a" \
-            --protocol tcp \
-            --port "22-443" \
-            --cidr "${IP}/32" > /dev/null
+      # - name: Inject IPs into policy YAML
+      #   run: |
+      #     IP=$(curl -s ifconfig.me)
+      #     echo "Runner public IP: $IP"
+      #     aws ec2 authorize-security-group-ingress \
+      #       --region us-east-1 \
+      #       --group-id "sg-0ab46ac1c9bfe7e7a" \
+      #       --protocol tcp \
+      #       --port "22-443" \
+      #       --cidr "${IP}/32" > /dev/null
           
       - name: Terraform Init
         run: |
