--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -22,6 +22,7 @@ env:
 
 jobs:
   terraform-apply:
+    if: false
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/drewpypro/kube-aws-istio:latest
