--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -197,6 +197,25 @@ jobs:
             echo "yamllint_error=false" >> $GITHUB_OUTPUT
           fi
 
+      - name: Third-Party Validation
+        run: |
+          pip install --quiet PyYAML
+          chmod +x ./scripts/validate_thirdparty.py
+          
+          echo "🔍 Validating third-party contract and risk..."
+
+          if ! python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDBconfigName.json; then
+            echo "### ❌ Third-party validation failed" > /tmp/thirdparty_validation.txt
+            echo '```' >> /tmp/thirdparty_validation.txt
+            python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDBconfigName.json >> /tmp/thirdparty_validation.txt 2>&1
+            echo '```' >> /tmp/thirdparty_validation.txt
+
+            cat /tmp/thirdparty_validation.txt
+            exit 1
+          else
+            echo "✅ Third-party validation passed."
+          fi
+
       # Commit Changes and Create PR (Always Runs)
       - name: Commit Changes and Create PR
         id: create_pr
