--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -207,7 +207,7 @@ jobs:
           if ! python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDBconfigName.json; then
             echo "### ❌ Third-party validation failed" > /tmp/thirdparty_validation.txt
             echo '```' >> /tmp/thirdparty_validation.txt
-            python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDBconfigName.json >> /tmp/thirdparty_validation.txt 2>&1
+            python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDB.json >> /tmp/thirdparty_validation.txt 2>&1
             echo '```' >> /tmp/thirdparty_validation.txt
 
             cat /tmp/thirdparty_validation.txt
