--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -198,19 +198,26 @@ jobs:
           fi
 
       - name: Third-Party Validation
+        id: thirdparty_validation
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip install --quiet PyYAML
           chmod +x ./scripts/validate_thirdparty.py
-          
+
           echo "🔍 Validating third-party contract and risk..."
 
-          if ! python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDB.json; then
-            echo "### ❌ Third-party validation failed" > /tmp/thirdparty_validation.txt
-            echo '```' >> /tmp/thirdparty_validation.txt
-            python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./thirdpartyDB.json >> /tmp/thirdparty_validation.txt 2>&1
-            echo '```' >> /tmp/thirdparty_validation.txt
+          if ! python3 ./scripts/validate_thirdparty.py /tmp/issue.yaml ./scripts/thirdpartyDBconfigName.json > /tmp/thirdparty_validation.txt 2>&1; then
+            echo "Third-party validation failed. Posting result to GitHub Issue."
 
-            cat /tmp/thirdparty_validation.txt
+            echo '### ❌ Third-party validation failed' > /tmp/comment.txt
+            echo '```' >> /tmp/comment.txt
+            cat /tmp/thirdparty_validation.txt >> /tmp/comment.txt
+            echo '```' >> /tmp/comment.txt
+
+            ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
+            gh issue comment "$ISSUE_NUMBER" --body-file /tmp/comment.txt
+
             exit 1
           else
             echo "✅ Third-party validation passed."
