--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -210,9 +210,7 @@ jobs:
             echo "Third-party validation failed. Posting result to GitHub Issue."
 
             echo '### ❌ Third-party validation failed' > /tmp/comment.txt
-            echo '```' >> /tmp/comment.txt
-            cat /tmp/thirdparty_validation.txt >> /tmp/comment.txt
-            echo '```' >> /tmp/comment.txt
+            cat /tmp/thirdparty_validation.txt >> /tmp/comment.txt  # ✅ no wrapping backticks here
 
             ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
             gh issue comment "$ISSUE_NUMBER" --body-file /tmp/comment.txt
@@ -221,7 +219,7 @@ jobs:
           else
             echo "✅ Third-party validation passed."
           fi
-
+          
       # Commit Changes and Create PR (Always Runs)
       - name: Commit Changes and Create PR
         id: create_pr
