--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -219,7 +219,26 @@ jobs:
           else
             echo "✅ Third-party validation passed."
           fi
-          
+
+      - name: AI Review
+        env:
+          DREWPYAI_API_KEY: ${{ secrets.DREWPYAI_API_KEY }}
+          DREWPY_PAT: ${{ secrets.DREWPY_PAT }}
+          ISSUE_BODY: ${{ github.event.issue.body }}
+        run: |
+          echo "🤖 Cloning AI reviewer..."
+          git clone https://x-access-token:${{ secrets.DREWPY_PAT }}@github.com/drewpypro/drewpy-ai-actions.git
+          pip install -r drewpy-ai-actions/aws-netsec-automation-review/requirements.txt
+
+          echo "📊 Running AI rule reviewer..."
+          python3 drewpy-ai-actions/aws-netsec-automation-review/ai-rule-review.py \
+            --input-file /tmp/issue.yaml \
+            --output-file /tmp/ai_review_output.md
+
+          echo "📝 Posting AI review result..."
+          ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
+          gh issue comment "$ISSUE_NUMBER" --body-file /tmp/ai_review_output.md
+
       # Commit Changes and Create PR (Always Runs)
       - name: Commit Changes and Create PR
         id: create_pr
